erDiagram

	OPERATION {
		uuid oid
		uuid uid
        uuid prevvid
        uuid nextvid
        json content
	}

    VERSION {
        uuid vid
        uuid oid
    }

    OPERATION ||--|| VERSION: ""

	OBJECTIVE {
		uuid oid
		uuid uid
		uuid vid
		text text
		bool completed
	}

    LINK {
        uuid lid
        uuid uid
        uuid superoid
        uuid suboid
        int  index
        enum type
    }
    %% type: [owner | delegation | solo]

    OBJECTIVE ||--|| LINK: "per vid"

	COMPUTEDPROPS {
		uuid  oid
		int   degree
		int   depth
		float progress
	}

    OBJECTIVE ||--|| COMPUTEDPROPS: "per vid"

    OBJECTIVE ||--|| VERSION: "same vid"
    LINK ||--|| VERSION: "same vid"
    COMPUTEDPROPS ||--|| VERSION: "same vid"
